remove spring libs, enable beanautoscan, added retry for UserProfile patch
